Modernize Paper support and command visibility handling (#31)
* Remove redundant runtime Paper version regex
* Update project metadata and Java 25 build configuration
* Remove obsolete PaperLib compatibility code
* Restore and modernize tab-completion filtering
* Hide protected commands from the client command tree
* Fix global and per-command tab-completion bypass permissions
* Add Adventure and MiniMessage message formatting support
* Preserve compatibility with existing legacy color codes
* Improve config reload behavior and null safety
* Clean up plugin metadata and deprecated API usage